--- a/conferencias/demosal/presentacion_exp_w02.qmd
+++ b/conferencias/demosal/presentacion_exp_w02.qmd
@@ -131,8 +131,6 @@ load(here::here("./input/data/proc/proc_w02.RData"))
 
 - Observar la manera en que estudiantes operan sus **criterios de justicia** al momento de [***distribuir recompensas en el contexto escolar***]{.black} 
 
-- Recompensa a distribuir: [***décimas***]{.red2} 
-
 - Experimento distribucional de encuestas [@gilgen_distributional_2020]
 
 :::
@@ -178,18 +176,6 @@ load(here::here("./input/data/proc/proc_w02.RData"))
 
 # Experimento de <br> *distribución de recompensas* <br> (*décimas*) {data-background-color="#5f5758"}
 
-## **Sobre el experimento**
-::: {.incremental .highlight-last style="font-size: 100%;"}
-
-- Experimento de distribución de recompensas en el contexto escolar
-- Carácter **exploratorio** 
-- Recuadros que describen tipologías de estudiantes a partir de dos características: 
-  - [**Esfuerzo**]{.red2} 
-  - [**Condiciones del hogar**]{.red2}
-
-- A partir de la nota, pueden ***aprobar** y/o **desaprobar*** a algún estudiante 
-
-:::
 
 ## Planteamiento del experimento
 
@@ -262,7 +248,7 @@ datos %>% select(exp_t1_a, exp_t1_b) %>%
                 sort.frq="first.desc",
                 axis.labels = c("A.", "B."),
                 show.total=FALSE,
-                geom.colors = c("#505050", "#555555", "#404040", "#A0A0A0", "#8C8C8C", "#787878")) +
+                geom.colors = c("#F08080", "#E74C3C", "#C0392B", "#3498DB", "#2980B9", "#1F618D")) +
   theme_bw()+
   theme(legend.position="bottom",
         text=element_text(size=16))+
@@ -298,7 +284,7 @@ datos %>% select(exp_t2_a, exp_t2_b) %>%
                 show.total=FALSE,
                 axis.labels=c("A.",
                               "B."),
-                geom.colors = c("#505050", "#555555", "#404040", "#A0A0A0", "#8C8C8C", "#787878")) +
+                geom.colors = c("#F08080", "#E74C3C", "#C0392B", "#3498DB", "#2980B9", "#1F618D")) +
   theme_bw()+
   theme(legend.position="bottom",
         text=element_text(size=16))+
@@ -336,7 +322,7 @@ datos %>% select(exp_t3_a, exp_t3_b) %>%
                 show.total=FALSE,
                 axis.labels=c("A.",
                               "B."),
-                geom.colors = c("#505050", "#555555", "#404040", "#A0A0A0", "#8C8C8C", "#787878")) +
+                geom.colors = c("#F08080", "#E74C3C", "#C0392B", "#3498DB", "#2980B9", "#1F618D")) +
   theme_bw()+
   theme(legend.position="bottom",
         text=element_text(size=16))+
@@ -374,10 +360,10 @@ datos %>% select(exp_t4_d:exp_t4_a) %>%
                 show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
     geom.colors = c(
-     "#505050", "#555555", "#404040", 
-  "#C0C0C0", "#D0D0D0", "#B8B8B8",  
-  "#A0A0A0", "#909090", "#808080",  
-  "#707070", "#606060"   
+     "#F08080", "#E74C3C", "#C0392B", 
+      "#B0C4DE", "#87CEEB", "#5DADE2", 
+      "#3498DB", "#2E86C1", "#2874A6", 
+      "#21618C", "#1B4F72"  
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -413,7 +399,7 @@ plot_basica <- datos %>% filter(curso=="Básica") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -427,7 +413,7 @@ plot_media <- datos %>% filter(curso=="Media") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -469,7 +455,7 @@ plot_hombre <- datos %>% filter(genero=="Hombre") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -483,7 +469,7 @@ plot_mujer <- datos %>% filter(genero=="Mujer") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -525,7 +511,7 @@ plot_part_sub <- datos %>% filter(dependencia=="Colegio Particular Subvencionado
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -539,7 +525,7 @@ plot_mun <- datos %>% filter(dependencia=="Colegio Municipal") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -580,7 +566,7 @@ plot_superiores <- datos %>% filter(educ_max=="Estudios superiores") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -594,7 +580,7 @@ plot_media_menos <- datos %>% filter(educ_max=="Enseñanza media o menos") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -634,7 +620,7 @@ plot_mas_lib <- datos %>% filter(libros_hogar=="Más de 25 libros") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -648,7 +634,7 @@ plot_menos_lib <- datos %>% filter(libros_hogar=="Menos de 25 libros") %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -685,10 +671,8 @@ ggarrange(plot_mas_lib, plot_menos_lib, common.legend = TRUE, nrow=2, legend = c
 
 ```{r}
 datos <- datos %>% mutate(nse = case_when(
-  dependencia == "Colegio Municipal" ~ 1,
   libros_hogar == "Menos de 25 libros"  ~ 1,
   educ_max == "Enseñanza media o menos"  ~ 1,
-   dependencia == "Colegio Particular Subvencionado" ~ 2,
   libros_hogar == "Más de 25 libros"  ~ 2,
   educ_max == "Estudios superiores"  ~ 2,
     TRUE ~ NA_integer_
@@ -699,7 +683,7 @@ plot_1 <- datos %>% filter(nse==1) %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
+    geom.colors = c("#E74C3C", "#2E86C1"
     )) +
   theme_bw()+
   theme(legend.position="bottom",
@@ -713,8 +697,7 @@ plot_2 <- datos %>% filter(nse==2) %>%
   dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
   plot_stackfrq(show.total=FALSE,
                 axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#5c5c5c", "#DBDBDB"
-    )) +
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
   theme_bw()+
   theme(legend.position="bottom",
         text=element_text(size=16))+
@@ -747,6 +730,180 @@ ggarrange(plot_1, plot_2, common.legend = TRUE, nrow=2, legend = c("bottom", "ri
 ```
 :::
 :::
+
+## 
+
+::: {.columns}
+
+::: {.column width="20%"}
+
+![](images/caso4.png)
+:::
+
+::: {.column width="80%"}
+
+<br>
+
+```{r}
+datos <- datos %>% mutate(estatus = case_when(
+  nse == 1  ~ 1,
+  genero == "Mujer"  ~ 1,
+  nse == 2  ~ 2,
+  genero == "Hombre"  ~ 2,
+    TRUE ~ NA_integer_
+  ))
+
+```
+
+```{r}
+plot_1 <- datos %>% filter(estatus==1) %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1"
+    )) +
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Estatus bajo"
+  )
+
+plot_2 <- datos %>% filter(estatus==2) %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Estatus alto"
+  )
+
+```
+
+```{r}
+#| fig-width: 8
+#| fig-height: 5
+#| out-width: '95%'
+#| echo: false
+
+ggarrange(plot_1, plot_2, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
+```
+
+:::
+:::
+
+## 
+
+::: {.columns}
+
+::: {.column width="20%"}
+
+![](images/caso4.png)
+:::
+
+::: {.column width="80%"}
+
+<br>
+
+```{r}
+plot_n6 <- datos %>% filter(p4_o2==6.00) %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1"
+    )) +
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Estudiantes que obtuvieron Nota 6"
+  )
+
+plot_n5 <- datos %>% filter(p4_o2==5.00) %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Estudiantes que obtuvieron Nota 5"
+  )
+
+plot_n7 <- datos %>% filter(p4_o2==7.00) %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Estudiantes que obtuvieron Nota 7"
+  )
+
+plot_n4 <- datos %>% filter(p4_o2==4.00) %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Estudiantes que obtuvieron Nota 4"
+  )
+```
+
+```{r}
+#| fig-width: 8
+#| fig-height: 5
+#| out-width: '95%'
+#| echo: false
+
+ggarrange(plot_n5, plot_n6, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
+
+
+```
+
+:::
+:::
+
+## 
+
+::: {.columns}
+
+::: {.column width="20%"}
+
+![](images/caso4.png)
+:::
+
+::: {.column width="80%"}
+
+<br>
+
+```{r}
+#| fig-width: 8
+#| fig-height: 5
+#| out-width: '95%'
+#| echo: false
+ggarrange(plot_n4, plot_n7, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
+```
+
+
+:::
+:::
+
 
 ## **Discusión y conclusiones**
 
