--- a/conferencias/demosal/presentacion_exp_w02.qmd
+++ b/conferencias/demosal/presentacion_exp_w02.qmd
@@ -165,13 +165,13 @@ load(here::here("./input/data/proc/proc_w02.RData"))
 ::: {.incremental .highlight-last style="font-size: 100%;"}
 - Encuesta panel en estudiantes 2023-2024
 
-- Ola 2 N=637
+- Ola 2 N=674
 
 - 7 escuelas de la región metropolitana
 
-- 49.1% estudiantes de 7° básico y 50.9% estudiantes de 2° medio
+- 48.5% estudiantes de 7° básico y 51.4% estudiantes de 2° medio
 
-- 51.5% hombres y 48.5% Mujeres
+- 50.8% hombres y 47.3% Mujeres
 :::
 
 # Experimento de <br> *distribución de recompensas* <br> (*décimas*) {data-background-color="#5f5758"}
@@ -555,118 +555,9 @@ plot_mun <- datos %>% filter(dependencia=="Colegio Municipal") %>%
 ggarrange(plot_part_sub, plot_mun, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
 
 ```
-
 :::
 :::
 
-##
-
-```{r}
-plot_superiores <- datos %>% filter(educ_max=="Estudios superiores") %>% 
-  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
-  plot_stackfrq(show.total=FALSE,
-                axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#E74C3C", "#2E86C1"
-    )) +
-  theme_bw()+
-  theme(legend.position="bottom",
-        text=element_text(size=16))+
-  labs(
-    fill = "Cantidad décimas",
-    title = "Estudios superiores"
-  )
-
-plot_media_menos <- datos %>% filter(educ_max=="Enseñanza media o menos") %>% 
-  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
-  plot_stackfrq(show.total=FALSE,
-                axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#E74C3C", "#2E86C1"
-    )) +
-  theme_bw()+
-  theme(legend.position="bottom",
-        text=element_text(size=16))+
-  labs(
-    fill = "Cantidad décimas",
-    title = "Enseñanza media o menos"
-  )
-```
-::: {.columns}
-
-::: {.column width="20%"}
-
-![](images/caso4.png)
-
-:::
-
-::: {.column width="80%"}
-
-<br>
-
-```{r}
-#| fig-width: 8
-#| fig-height: 5
-#| out-width: '95%'
-
-ggarrange(plot_superiores, plot_media_menos, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
-
-```
-:::
-:::
-
-##
-
-```{r}
-plot_mas_lib <- datos %>% filter(libros_hogar=="Más de 25 libros") %>% 
-  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
-  plot_stackfrq(show.total=FALSE,
-                axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#E74C3C", "#2E86C1"
-    )) +
-  theme_bw()+
-  theme(legend.position="bottom",
-        text=element_text(size=16))+
-  labs(
-    fill = "Cantidad décimas",
-    title = "Más de 25 libros"
-  )
-
-plot_menos_lib <- datos %>% filter(libros_hogar=="Menos de 25 libros") %>% 
-  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
-  plot_stackfrq(show.total=FALSE,
-                axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#E74C3C", "#2E86C1"
-    )) +
-  theme_bw()+
-  theme(legend.position="bottom",
-        text=element_text(size=16))+
-  labs(
-    fill = "Cantidad décimas",
-    title = "Menos de 25 libros"
-  )
-```
-::: {.columns}
-
-::: {.column width="20%"}
-
-![](images/caso4.png)
-
-:::
-
-::: {.column width="80%"}
-
-<br>
-
-```{r}
-#| fig-width: 8
-#| fig-height: 5
-#| out-width: '95%'
-
-ggarrange(plot_mas_lib, plot_menos_lib, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
-
-```
-
-:::
-:::
 ##
 
 ```{r}
@@ -731,71 +622,7 @@ ggarrange(plot_1, plot_2, common.legend = TRUE, nrow=2, legend = c("bottom", "ri
 :::
 :::
 
-## 
 
-::: {.columns}
-
-::: {.column width="20%"}
-
-![](images/caso4.png)
-:::
-
-::: {.column width="80%"}
-
-<br>
-
-```{r}
-datos <- datos %>% mutate(estatus = case_when(
-  nse == 1  ~ 1,
-  genero == "Mujer"  ~ 1,
-  nse == 2  ~ 2,
-  genero == "Hombre"  ~ 2,
-    TRUE ~ NA_integer_
-  ))
-
-```
-
-```{r}
-plot_1 <- datos %>% filter(estatus==1) %>% 
-  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
-  plot_stackfrq(show.total=FALSE,
-                axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#E74C3C", "#2E86C1"
-    )) +
-  theme_bw()+
-  theme(legend.position="bottom",
-        text=element_text(size=16))+
-  labs(
-    fill = "Cantidad décimas",
-    title = "Estatus bajo"
-  )
-
-plot_2 <- datos %>% filter(estatus==2) %>% 
-  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
-  plot_stackfrq(show.total=FALSE,
-                axis.labels=rev(c("A.", "B.", "C.", "D.")),
-    geom.colors = c("#E74C3C", "#2E86C1")) + 
-  theme_bw()+
-  theme(legend.position="bottom",
-        text=element_text(size=16))+
-  labs(
-    fill = "Cantidad décimas",
-    title = "Estatus alto"
-  )
-
-```
-
-```{r}
-#| fig-width: 8
-#| fig-height: 5
-#| out-width: '95%'
-#| echo: false
-
-ggarrange(plot_1, plot_2, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
-```
-
-:::
-:::
 
 ## 
 
@@ -904,7 +731,212 @@ ggarrange(plot_n4, plot_n7, common.legend = TRUE, nrow=2, legend = c("bottom", "
 :::
 :::
 
+## 
 
+::: {.columns}
+
+::: {.column width="20%"}
+
+![](images/caso4.png)
+
+:::
+
+::: {.column width="80%"}
+
+<br>
+
+```{r}
+datos$p1_1_o2 <- car::recode(datos$p1_1_o2,"1=1;2=1;3=2;4=2")
+
+datos$p1_1_o2 <- factor(datos$p1_1_o2, 
+                         levels=c(1,2),
+                         labels=c("En desacuerdo","De acuerdo"))
+
+datos$p2_1_o2 <- car::recode(datos$p2_1_o2,"1=1;2=1;3=2;4=2")
+
+datos$p2_1_o2 <- factor(datos$p2_1_o2, 
+                         levels=c(1,2),
+                         labels=c("En desacuerdo","De acuerdo"))
+ 
+
+
+plot_es <- datos %>% filter(p2_1_o2=="De acuerdo") %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Percepción esfuerzo en la escuela"
+  )
+
+plot_ec <- datos %>% filter(p1_1_o2=="De acuerdo") %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Percepción esfuerzo en la sociedad"
+  )
+```
+
+```{r}
+#| fig-width: 8
+#| fig-height: 5
+#| echo: false
+#| out-width: '95%'
+
+ggarrange(plot_es, plot_ec, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
+
+```
+
+:::
+:::
+
+## 
+
+::: {.columns}
+
+::: {.column width="20%"}
+
+![](images/caso4.png)
+
+:::
+
+::: {.column width="80%"}
+
+<br>
+
+```{r}
+datos$p1_2_o2 <- car::recode(datos$p1_2_o2,"1=1;2=1;3=2;4=2")
+
+datos$p1_2_o2 <- factor(datos$p1_2_o2, 
+                         levels=c(1,2),
+                         labels=c("En desacuerdo","De acuerdo"))
+
+datos$p2_2_o2 <- car::recode(datos$p2_2_o2,"1=1;2=1;3=2;4=2")
+
+datos$p2_2_o2 <- factor(datos$p2_2_o2, 
+                         levels=c(1,2),
+                         labels=c("En desacuerdo","De acuerdo"))
+ 
+
+
+plot_tc <- datos %>% filter(p2_2_o2=="De acuerdo") %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Percepción talento en la escuela"
+  )
+
+plot_ts <- datos %>% filter(p1_2_o2=="De acuerdo") %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Percepción talento en la sociedad"
+  )
+```
+
+```{r}
+#| fig-width: 8
+#| fig-height: 5
+#| echo: false
+#| out-width: '95%'
+
+ggarrange(plot_ts, plot_tc, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
+
+```
+
+:::
+:::
+
+## 
+
+::: {.columns}
+
+::: {.column width="20%"}
+
+![](images/caso4.png)
+
+:::
+
+::: {.column width="80%"}
+
+<br>
+
+```{r}
+datos$p1_3_o2 <- car::recode(datos$p1_3_o2,"1=1;2=1;3=2;4=2")
+
+datos$p1_3_o2 <- factor(datos$p1_3_o2, 
+                         levels=c(1,2),
+                         labels=c("En desacuerdo","De acuerdo"))
+
+datos$p2_3_o2 <- car::recode(datos$p2_3_o2,"1=1;2=1;3=2;4=2")
+
+datos$p2_3_o2 <- factor(datos$p2_3_o2, 
+                         levels=c(1,2),
+                         labels=c("En desacuerdo","De acuerdo"))
+ 
+
+
+plot_mc <- datos %>% filter(p2_3_o2=="De acuerdo") %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Percepción merecimiento en la escuela"
+  )
+
+plot_ms <- datos %>% filter(p1_1_o2=="De acuerdo") %>% 
+  dplyr::select(exp_t4_d_rec:exp_t4_a_rec) %>%
+  plot_stackfrq(show.total=FALSE,
+                axis.labels=rev(c("A.", "B.", "C.", "D.")),
+    geom.colors = c("#E74C3C", "#2E86C1")) + 
+  theme_bw()+
+  theme(legend.position="bottom",
+        text=element_text(size=16))+
+  labs(
+    fill = "Cantidad décimas",
+    title = "Percepción merecimiento en la sociedad"
+  )
+```
+
+```{r}
+#| fig-width: 8
+#| fig-height: 5
+#| echo: false
+#| out-width: '95%'
+
+ggarrange(plot_ms, plot_mc, common.legend = TRUE, nrow=2, legend = c("bottom", "right"))
+
+```
+
+:::
+:::
 ## **Discusión y conclusiones**
 
 ::: {.incremental .highlight-last style="font-size: 100%;"}
